compiler/weave_syntax/tests/data/syntax/namespace/ns0004.error
error: Expected '}'
        --> <source>:2:1
         |
       2 | 
         | ^
